5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4501/executions/1594_2426.log
== TEST (2019-04-10 23:38:16) 
-- CODE:
const
 KM_LITRO=12;

var
 vTempo, vVelMedia, vDistancia, vConsumo:Real:
			
begin

 Escreva("Informe o tempo gasto na viagemem horas: ");
 Leia(vTempo);


distancia=tempo*velocidade
litros_usados=distancia/12

-- ERROR:
File "XXXX", line 2
    KM_LITRO=12;
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 23:39:12) 
-- CODE:
distancia=tempo*velocidade
litros_usados=distancia/12

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    distancia=tempo*velocidade
NameError: name 'tempo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 23:47:16) 
-- CODE:
dist=float(input("Digite a distancia em Km: "))
velo=float(input("Digite a velocidade media: "))

tempo=12/velo
print("Tempo em horas %.if" %tempo)

-- OUTPUT:
Tempo em horas 0f
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 23:47:32) 
-- CODE:
dist=float(input("Digite a distancia em Km: "))
velo=float(input("Digite a velocidade media: "))

tempo=12/velo
print("Tempo em horas %.if" %tempo)

-- EXECUTION TIME:
0.192977
-- TEST CASE 1:
---- input:
9
100
---- correct output:
900.0
75.0
---- user output:
Tempo em horas 0f
-- TEST CASE 2:
---- input:
5
120

---- correct output:
600.0
50.0

---- user output:
Tempo em horas 0f
-- TEST CASE 3:
---- input:
1.2
80
---- correct output:
96.0
8.0

---- user output:
Tempo em horas 0f
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 23:47:45) 
-- CODE:
dist=float(input("Digite a distancia em Km: 12"))
velo=float(input("Digite a velocidade media: "))

tempo=12/velo
print("Tempo em horas %.if" %tempo)

-- OUTPUT:
Tempo em horas 0f
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 23:47:56) 
-- CODE:
dist=float(input("Digite a distancia em Km: 12"))
velo=float(input("Digite a velocidade media: "))

tempo=12/velo
print("Tempo em horas %.if" %tempo)

-- EXECUTION TIME:
0.159866
-- TEST CASE 1:
---- input:
9
100
---- correct output:
900.0
75.0
---- user output:
Tempo em horas 0f
-- TEST CASE 2:
---- input:
5
120

---- correct output:
600.0
50.0

---- user output:
Tempo em horas 0f
-- TEST CASE 3:
---- input:
1.2
80
---- correct output:
96.0
8.0

---- user output:
Tempo em horas 0f
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 16:20:18) 
-- CODE:
a=float(input("Tempo: "))
b=float(input("Velocidade: "))
d=b*a
t=d/12
print(d)
print(t)

-- OUTPUT:
900.0
75.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 16:20:57) 
-- CODE:
a=float(input("Tempo: "))
b=float(input("Velocidade: "))
d=b*a
t=d/12
print(d)
print(t)

-- EXECUTION TIME:
0.300409
-- TEST CASE 1:
---- input:
9
100
---- correct output:
900.0
75.0
---- user output:
900.0
75.0
-- TEST CASE 2:
---- input:
5
120

---- correct output:
600.0
50.0

---- user output:
600.0
50.0
-- TEST CASE 3:
---- input:
1.2
80
---- correct output:
96.0
8.0

---- user output:
96.0
8.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
